# beemflow-rs

./: .env.example  .gitignore  .mcp.json  Cargo.toml  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml  test.yml
core_macros/: Cargo.toml
core_macros/src/: lib.rs
docs/: BEEMFLOW.md  SPEC.md  beemflow.schema.json  flow.config.schema.json
flows/e2e/: airtable_integration.flow.yaml  fetch_and_summarize.flow.yaml  parallel_openai.flow.yaml
flows/examples/: await_resume_demo.flow.yaml  google_sheets_social.flow.yaml  hello_world.flow.yaml  memory_demo.flow.yaml  parallel_anthropic.flow.yaml  social_media_publisher.flow.yaml  truth_seeking_counsel.flow.yaml  tweet_approval_workflow.flow.yaml  x_posting.flow.yaml
flows/integration/: auto_dependency_detection.flow.yaml  circular_dependencies.flow.yaml  complex_dependencies.flow.yaml  dependency_order.flow.yaml  edge_cases.flow.yaml  engine_comprehensive.flow.yaml  global_save_test.yaml  http_patterns.flow.yaml  hybrid_dependencies.flow.yaml  nested_parallel.flow.yaml  optional_dependencies.flow.yaml  parallel_execution.flow.yaml  performance.flow.yaml  simple_parallel.flow.yaml  spec_compliance_test.flow.yaml  templating_system.flow.yaml
migrations/postgres/: 20250101000001_initial_schema.sql  20250101000002_postgres_enhancements.sql
migrations/sqlite/: 20250101000001_initial_schema.sql
src/: constants.rs  error.rs  lib.rs  main.rs  model.rs  model_test.rs  telemetry.rs  utils.rs
src/adapter/: adapter_test.rs  core.rs  core_test.rs  http.rs  http_test.rs  mcp.rs  mcp_test.rs  mod.rs
src/auth/: client.rs  client_test.rs  middleware.rs  middleware_test.rs  mod.rs  server.rs  server_test.rs
src/blob/: blob_test.rs  mod.rs  s3.rs  s3_test.rs
src/cli/: mod.rs
src/config/: config_test.rs  mod.rs
src/core/: events.rs  flows.rs  mcp.rs  mod.rs  runs.rs  system.rs  tools.rs
src/cron/: cron_test.rs  mod.rs
src/dsl/: analyzer.rs  analyzer_test.rs  mod.rs  parser.rs  parser_test.rs  template.rs  template_test.rs  validator.rs  validator_test.rs
src/engine/: context.rs  context_test.rs  engine_test.rs  error_test.rs  executor.rs  executor_test.rs  mod.rs  runs_access.rs
src/event/: event_test.rs  mod.rs
src/graph/: graph_test.rs  mod.rs
src/http/: http_test.rs  mod.rs  response.rs  response_test.rs  session.rs  session_test.rs  template.rs  template_test.rs  webhook.rs  webhook_test.rs
src/mcp/: manager.rs  manager_test.rs  mod.rs  server.rs  server_test.rs
src/registry/: default.json  default.rs  local.rs  manager.rs  mod.rs  registry_test.rs  remote.rs  smithery.rs
src/secrets/: env.rs  mod.rs
src/storage/: flows.rs  memory.rs  memory_test.rs  mod.rs  postgres.rs  postgres_test.rs  sql_common.rs  sqlite.rs  sqlite_test.rs  storage_test.rs
static/oauth/: consent.html  provider_auth.html  providers.html  style.css  success.html
tests/: dependency_test.rs  flows_integration_test.rs  integration_test.rs  mcp_http_oauth_test.rs  mcp_manager_integration_test.rs  mcp_sse_oauth_test.rs
