[workspace]
members = [".", "core_macros"]

[package]
name = "beemflow"
version = "0.2.0"
edition = "2024"
authors = ["Alec Wantoch", "Zachary Pelkey"]
description = "BeemFlow - AI Workflow orchestration runtime"
license = "Commercial"
repository = "https://github.com/beemflow/beemflow"

# Library target
[lib]
name = "beemflow"
path = "src/lib.rs"

# Binary target - CLI tool
[[bin]]
name = "flow"
path = "src/main.rs"

[dependencies]
# Core macros (proc-macro)
beemflow_core_macros = { path = "./core_macros" }

# Async Runtime & Utilities
tokio = { version = "1.47", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
tokio-util = { version = "0.7", features = ["full"] }
pin-project = "1.1"

# HTTP Server & Client
axum = { version = "0.8", features = ["ws", "form"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
hyper = { version = "1.7", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Serialization & Data
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
serde_with = "3"

# Templating
minijinja = { version = "2.12", features = ["builtins"] }

# MCP - Official Rust SDK
rmcp = { version = "0.8", features = ["server", "macros", "transport-io"] }

# Database & Storage
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# CLI
clap = { version = "4.5", features = ["derive", "env", "cargo"] }

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Validation
jsonschema = "0.33"
validator = { version = "0.20", features = ["derive"] }
schemars = "1.0"

# UUID & Time
uuid = { version = "1.8", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# OAuth
oauth2 = "5.0"
jsonwebtoken = { version = "10.0", default-features = false, features = ["rust_crypto"] }
rand = "0.9"
base64 = "0.22"
url = "2"

# Regex & String Processing
once_cell = "1.20"
urlencoding = "2.1"

# Cryptography
sha2 = "0.10"
hmac = "0.12"

# Utilities
itertools = "0.14"
bytes = "1.8"
parking_lot = "0.12"
dashmap = "6.1"
regex = "1.12"
cron = "0.15"
hex = "0.4"
subtle = "2.5"
dotenvy = "0.15"
semver = "1.0"
dirs = "6.0"

# S3 storage
aws-config = "1"
aws-sdk-s3 = "1"

# Telemetry
prometheus = "0.14.0"
opentelemetry = "0.31.0"
opentelemetry-otlp = "0.31.0"
opentelemetry_sdk = "0.31.0"
opentelemetry-stdout = "0.31.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
# Testing & Development
wiremock = "0.6.0"
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
tempfile = "3.10.1"
tokio-test = "0.4.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

